alignment issues fixed

--- a/src/views/News/News.css
+++ b/src/views/News/News.css
@@ -30,23 +30,20 @@
         
 }
 .headtrends{
-    position: absolute;
-    padding-left: 16%;
     margin-top: 10px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: large;
     font-size: 40px;
-    margin-left: 18%;
+    text-align: center;
     background:linear-gradient(to left,#002aff,#0ce3ff);
     color: transparent;
     background-clip: text;
-     margin-bottom: 5px;
 }
 .trendcardcontainer{
     display: flex;
     margin-top: 10px;
-    padding: 10px;
+    padding: 5px;
 }
 .heading-skills{
     text-align: center;
